--- a/apps/hue-crm/src/app/app.component.html
+++ b/apps/hue-crm/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div style="text-align:center">
-    <h1>Welcome to hue-crm!</h1>
-    <img
-            src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png"
-            width="450"
-    />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<router-outlet></router-outlet>
