add nebular and components

--- a/libs/components/src/lib/login/login.component.html
+++ b/libs/components/src/lib/login/login.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="loginUser($event)">
+<form (ngSubmit)="loginUser()">
     <label>
         <input #formUsername id="username" placeholder="Username" type="text">
     </label>
@@ -6,4 +6,5 @@
         <input #formPassword id="password" placeholder="Password" type="password">
     </label>
     <input type="Submit" value="Submit">
+
 </form>
