--- a/apps/hue-crm/src/app/app.component.html
+++ b/apps/hue-crm/src/app/app.component.html
@@ -1,1 +1,17 @@
-<router-outlet></router-outlet>
+<nb-layout>
+
+    <nb-layout-header fixed>
+        <!-- Insert header here -->
+    </nb-layout-header>
+
+    <nb-layout-column>
+
+        <huecrm-login></huecrm-login>
+
+    </nb-layout-column>
+
+    <nb-layout-footer fixed>
+        <!-- Insert footer here -->
+    </nb-layout-footer>
+
+</nb-layout>
