--- a/apps/hue-crm/src/styles.scss
+++ b/apps/hue-crm/src/styles.scss
@@ -1,1 +1,10 @@
+@import 'themes';
+@import '~@nebular/theme/styles/globals';
+
+@include nb-install() {
+  @include nb-theme-global();
+}
+
+;
 /* You can add global styles to this file, and also import other style files */
+
