--- a/apps/hue-crm/src/styles.scss
+++ b/apps/hue-crm/src/styles.scss
@@ -1,5 +1,13 @@
 @import 'themes';
 @import '~@nebular/theme/styles/globals';
+
+@include nb-install() {
+  @include nb-theme-global();
+}
+
+;
+@import 'themes';
+@import '~@nebular/theme/styles/globals';
 @import '~@nebular/auth/styles/globals';
 
 @include nb-install() {
