Front-end authentication adjustments, add Bearer token to header requests.

--- a/apps/hue-crm/src/app/header/header.component.html
+++ b/apps/hue-crm/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="user-container">
-        <nb-user [name]="userObject.username" [picture]="userObject.picture" [title]="userObject.role"
+        <nb-user [name]="user?.username" [picture]="user?.picture" [title]="user?.role"
                  size="large"></nb-user>
     </div>
 </div>
